test/spec_vectors/simd_bit_shift/fail/module_34.wat
(module (func $i16x8.shr_u-arg-empty (result v128) (i16x8.shr_u)))